--- a/style.css
+++ b/style.css
@@ -134,3 +134,27 @@ section{
 #btn-next{
     right: 50px;
 }
+#ant_erior, #des_pues{
+    width: 40px;
+    height: 40px;
+    background: rgba(255,255,255,0.7);
+    position:absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    line-height: 40px;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 50%;
+    font-family: monospace;
+    cursor: pointer;
+}
+#ant_erior:hover, #des_pues:hover{
+    background: rgba(255,255,255,1);
+}
+#ant_erior{
+    left: 10px;
+}
+#des_pues{
+    right: 50px;
+}
