--- a/style.css
+++ b/style.css
@@ -9,8 +9,20 @@ header{
     padding-top: 0px;
     
 }
+
 .iconnos{
     position: relative;
+}
+.appWhatsapp{
+    position: fixed;
+    right: 26px;
+    bottom:100px;
+    width: 60px;
+    z-index: 1000;
+}
+.appWhatsapp img{
+    width: 100%;
+    height: auto;
 }
 header img{
     width: 70px;
