--- a/style.css
+++ b/style.css
@@ -110,6 +110,15 @@ header #redes-sociales i{
     75%{margin-left: -300%;}
     100%{margin-left: -300%;}
 }
+.footer{
+    background-color: #a72020;
+    width: 100%;
+    height: 50px;
+    bottom: 0;
+    position: fixed;
+    text-align: center;
+    color: #080808;
+}
 
 /*hamburger*/
 #Ingre h6{
