prueva pagina completa

--- a/style.css
+++ b/style.css
@@ -111,9 +111,9 @@ header #redes-sociales i{
     100%{margin-left: -300%;}
 }
 .footer{
-    background-color: #a72020;
+    background-color: #63f58f;
     width: 100%;
-    height: 50px;
+    height: 25px;
     bottom: 0;
     position: fixed;
     text-align: center;
