--- a/style.css
+++ b/style.css
@@ -63,6 +63,9 @@ header #redes-sociales i{
     color: white;
     font-size: 3rem;    
 }
+.precios{
+    color: #5ff707;
+}
 .menu-bar{
    background-color: rgb(224, 152, 58);
    
