--- a/estilo3.css
+++ b/estilo3.css
@@ -58,7 +58,7 @@ body{
 .container .menu ul{
     height: 100%;
 }
-.container .menu ul li a {
+.container .menu ul li  {
     border-bottom: 1px solid #fff;
     list-style: none;
     margin: 0 30px;
@@ -66,12 +66,8 @@ body{
     font-size: .7em;
     text-decoration: none;
 }
-.container .menu ul li  {
-    border-bottom: 1px solid #fff;
-    margin: 0 30px;
-    font-family: sans-serif;
-    font-size: .7em;
-    list-style: none;
+.titulos{
+    color: #fff;
 }
 .menu .logo{
     color: #f0c11e;
