--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header #redes-sociales i{
     font-size: 3rem;    
 }
 .precios{
-    color: #5ff707;
+    color: #03e621;
 }
 .menu-bar{
    background-color: rgb(224, 152, 58);
